Altera leitura de arquivo para não criar cópia do mesmo na raiz do projeto